[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/generators/world_generator.tres" type="VoxelGeneratorGraph" id=1]
[ext_resource path="res://assets/materials/transvoxel_terrain_material.tres" type="Material" id=2]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menu/SettingsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/models/RustyCan.tres" type="ArrayMesh" id=7]
[ext_resource path="res://scenes/GamePanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/M113.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/models/Can.tres" type="ArrayMesh" id=10]

[sub_resource type="VoxelMesherTransvoxel" id=1]

[sub_resource type="VoxelInstanceGenerator" id=13]
density = 0.01
max_scale = 2.0
vertical_alignment = 0.0
random_vertical_flip = true

[sub_resource type="VoxelInstanceLibraryItem" id=14]
lod_index = 2
generator = SubResource( 13 )
persistent = true
mesh = ExtResource( 7 )

[sub_resource type="VoxelInstanceGenerator" id=16]
density = 0.01
vertical_alignment = 0.0
random_vertical_flip = true

[sub_resource type="VoxelInstanceLibraryItem" id=18]
lod_index = 2
generator = SubResource( 16 )
mesh = ExtResource( 10 )
cast_shadow = 0

[sub_resource type="VoxelInstanceLibrary" id=15]
item_1 = SubResource( 14 )
item_2 = SubResource( 18 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0, 0, 0, 1 )
metallic_specular = 0.0

[sub_resource type="ProceduralSky" id=10]
ground_bottom_color = Color( 0.647059, 0.839216, 0.945098, 1 )
ground_horizon_color = Color( 0.839216, 0.917647, 0.980392, 1 )

[sub_resource type="Environment" id=11]
background_sky = SubResource( 10 )
ambient_light_sky_contribution = 0.96
fog_enabled = true
auto_exposure_scale = 0.04
auto_exposure_min_luma = 0.0
auto_exposure_max_luma = 8.67
auto_exposure_speed = 0.01
dof_blur_far_distance = 32.0

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.519893, -0.450477, 0.725797, -0.249622, 0.732448, 0.633411, -0.816946, -0.510481, 0.268346, 0, 258.635, 0 )
shadow_enabled = true

[node name="VoxelLodTerrain" type="VoxelLodTerrain" parent="."]
generator = ExtResource( 1 )
mesher = SubResource( 1 )
view_distance = 64
material = ExtResource( 2 )

[node name="VoxelInstancer" type="VoxelInstancer" parent="VoxelLodTerrain"]
library = SubResource( 15 )

[node name="M113" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 0 )

[node name="Camera" type="Camera" parent="M113"]
transform = Transform( -1, 2.97541e-08, -8.22037e-08, 1.03103e-08, 0.973877, 0.227077, 8.68127e-08, 0.227077, -0.973877, 0, 4.6641, -7.85563 )

[node name="VoxelViewer" type="VoxelViewer" parent="M113/Camera"]
transform = Transform( 1, -1.77636e-15, 0, 1.77636e-15, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CSGSphere" type="CSGSphere" parent="M113/Camera"]
transform = Transform( 1, -7.10543e-15, 0, 7.10543e-15, 1, 0, 0, 0, 1, 1.70254, 1.79428, -2.57822 )
cast_shadow = 0
invert_faces = true
radius = 100.0
rings = 5
material = SubResource( 9 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[node name="GamePanel" parent="." instance=ExtResource( 8 )]

[node name="Pause" parent="." instance=ExtResource( 4 )]
pause_mode = 2
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]
pause_mode = 2
visible = false
